Fixed the top spacing with sidemenu

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ h1 span {
   z-index: 10;
   transition: all 1s ease;
   display: none;
+  margin-block-start: 0;
 }
 
 li {
